--- a/index.html
+++ b/index.html
@@ -5,11 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
     <title>Tic Tac Toe</title>
   </head>
 
   <body>
-    <h1>HELLO</h1>
+
+    <header>
+      <h2>Hello there. Enjoy Tic Tac Toe game!</h2>
+    </header>
+
+    <main>
+      <div class="wrapper">
+
+        <div id="dummy"></div>
+
+        <div class="game-board">
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+          <div class="spot"></div>
+        </div>
+
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-text">
+        Made with <span class="love-emoji">♥</span> by
+        <strong>
+          <a rel="noopener" class="red1dev-link" href="https://github.com/red1code" target="_blank">
+            Red1Dev
+          </a>
+        </strong>
+        <span id="year-holder"></span>
+      </div>
+    </footer>
 
   </body>
 
