improving code quality

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
       <h3 class="player-role">
         Role of:
-        <span id="Player1">Player-1</span>
-        <span id="Player2">Player-2</span>
+        <span id="Player1">X</span>
+        <span id="Player2">O</span>
       </h3>
 
       <div class="wrapper">
