renaming some vars

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
       <h3 class="player-role">
         Role of:
-        <span id="Player1">X</span>
-        <span id="Player2">O</span>
+        <span id="PlayerX">X</span>
+        <span id="PlayerO">O</span>
       </h3>
 
       <div class="wrapper">
@@ -39,7 +39,7 @@
 
       </div>
 
-      <button type="button" class="reset-btn" id="rstBtn">Reset</button>
+      <button type="button" class="reset-btn" id="resetBtn">Reset</button>
     </main>
 
     <footer>
