--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/tic-tac-toe-game-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
     <title>Tic Tac Toe</title>
@@ -46,7 +47,8 @@
       <div class="footer-text">
         Made with <span class="love-emoji">♥</span> by
         <strong>
-          <a rel="noopener" class="red1dev-link" href="https://github.com/red1code" target="_blank">
+          <a rel="noopener" class="red1dev-link" target="_blank" 
+             href="https://red1code.github.io/Tic-Tac-Toe/">
             Red1Dev
           </a>
         </strong>
