change footer link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         Made with <span class="love-emoji">♥</span> by
         <strong>
           <a rel="noopener" class="red1dev-link" target="_blank" 
-             href="https://red1code.github.io/Tic-Tac-Toe/">
+             href="https://github.com/red1code/Tic-Tac-Toe">
             Red1Dev
           </a>
         </strong>
